@@ -1,3 +1,8 @@
+Fri Aug 29 09:54:01 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* utils/replay_search_log.py: Add utility to replay a search log,
+	  and time it.
+
 Fri Aug 29 09:24:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/query.py: Copy the __serialised member correctly when a
